--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 
         .yeshref button a {color: #fff;font-size: 12px;display: block;width: 100%;height: inherit;text-align: center;line-height: 28px;}
 
+        .setWell{width: 100%;position: fixed;background: rgba(0,0,0,0.2);top: 0;left: 0;}
 
     </style>
 </head>
@@ -286,7 +287,8 @@
                 '        <p class="yeshref setAH"><button><a href="" target="_blank">确认</a></button></p>\n' +
                 '    </div>\n' +
                 '</div>';
-            $("body").append(setPopHtml);
+            $("body").append('<div class="setWell">'+setPopHtml+'</div>');
+            $(".setWell").height(DH)
             $(".yeshref a").attr('href', url);
             $(".hrefCon").html('是否确认跳转至 - ' + value + ' - 页面')
             $(".hrefPop").css({
@@ -294,7 +296,7 @@
                 'left': (DW - $(".hrefPop").width()) / 2 + 'px',
             });
             $(".setAH").click(function () {
-                $(".hrefPop").remove()
+                $(".setWell").remove()
             })
         }
 
