--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         .secondLiDiv {width: 100%;height: inherit;background: rgba(50, 52, 89, 0.8); padding-top: 5%;}
 
-        .secondLiDivC {background: rgba(50, 52, 89, 0.95);width: 90%;margin: 0 auto; min-height: 60%;}
+        .secondLiDivC {background: rgba(50, 52, 89, 0.95);width: 90%;margin: 0 auto; min-height: 80%;}
 
         .secondLi h2 {color: #fff;font-size: 24px;padding: 30px 0 0 30px;}
 
@@ -70,11 +70,11 @@
 
         .threeLi h4 {border-bottom: 2px solid rgba(50, 52, 89, 0.75);width: 50px;margin: 30px auto;}
 
-        .threeLM {background: rgba(50, 52, 89, 0.8);;width: 100%;height: inherit;padding-top: 10%;}
+        .threeLM {background: rgba(50, 52, 89, 0.8);width: 100%;height: inherit;padding-top: 5%;}
 
-        .threeLM p {padding: 15px;color: #323459;font-size: 14px;line-height: 30px;text-indent: 28px;width: 85%;margin: 0 auto;}
+        .threeLM p {padding: 15px;color: #323459;font-size: 14px;line-height: 30px; width: 85%;margin: 0 auto;}
 
-        .threeLMDiv {width: 70%;background: rgba(255, 255, 255, 0.75);margin: 0 auto;color: #000;min-height: 60%;}
+        .threeLMDiv {width: 70%;background: rgba(255, 255, 255, 0.75);margin: 0 auto;color: #000;min-height: 80%;}
 
         .fourLi {background: url("static/images/yjbg.jpg") no-repeat top center;background-size: 1130px auto;width: 1000px;}
 
@@ -111,7 +111,7 @@
         .sexLiDiv {width: 94%;margin: 30px auto;background: rgba(255, 255, 255, 0.85);
             -webkit-box-shadow: 0 0 10px 1px #727382;
             -moz-box-shadow: 0 0 10px 1px #727382;
-            box-shadow: 0 0 10px 1px #727382;}
+            box-shadow: 0 0 10px 1px #727382;height: 90%;}
 
         .sexLiDiv h3 {text-align: center;line-height: 50px;padding-top: 15px;color: #323459;font-size: 16px}
 
@@ -142,7 +142,41 @@
 
         .yeshref button a {color: #fff;font-size: 12px;display: block;width: 100%;height: inherit;text-align: center;line-height: 28px;}
 
-        .setWell{width: 100%;position: fixed;background: rgba(0,0,0,0.2);top: 0;left: 0;}
+        .setWell {width: 100%;position: fixed;background: rgba(0, 0, 0, 0.2);top: 0;left: 0;}
+
+        .TipsDiv {width: 100%;background: rgba(0, 0, 0, 0.8);position: fixed;z-index: 9999999;top: 0;left: 0;}
+
+        .TipsCon {position: absolute;width: 460px;height: 160px;background: #f6f6f6;-webkit-border-radius: 5px;-moz-border-radius: 5px;border-radius: 5px;}
+
+        .topTips {}
+
+        .topTips p {margin: 20px 15px 0 15px;font-size: 14px;color: #323459;line-height: 25px;overflow: hidden;}
+
+        .topTips p i {text-align: right;border: 1px dashed #ccc;display: block;float: right;font-style: normal;padding: 3px 20px;color: #999;}
+
+        .TimesDLi{width: 600px;background: rgba(50, 52, 89, 0.5)}
+
+
+
+        .times {width: 100%;}
+
+        .timeP {text-align: center;line-height: 120px;font-size: 50px;color: #323459;font-weight: bold;padding-top: 100px;}
+
+        .showTime {width: 400px;height: 170px;border: 1px dashed #ccc;margin: 0 auto;position: relative;-webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;overflow: hidden;}
+
+        .TimeTop {width: 0;height: 10px;top: 0px;left: 0;background: #000;}
+
+        .TimeLeft {width: 10px;height: 0;right: 0px;top: 0;}
+
+        .TimeBottom {width: 0;height: 10px;bottom: 0px;right: 0;}
+
+        .TimeRight {width: 10px;height: 0;left: 0px;bottom: 0;}
+
+        .TimeDD {position: absolute;}
+        .showTimeC{width: 380px;height: 150px;border:1px dashed #ccc;margin: 10px;text-align: center;line-height: 150px;font-size: 60px;font-weight: bold}
+
+
+
 
     </style>
 </head>
@@ -189,9 +223,28 @@
             <li class="sixLi">
                 <div class="sexLiDiv"></div>
             </li>
+            <li class="TimesDLi">
+
+
+
+                <div class="times">
+                    <div class="timeP"></div>
+                    <div class="showTime">
+                        <div class="showTimeC"></div>
+                        <div class="TimeDD TimeTop"></div>
+                        <div class="TimeDD TimeLeft"></div>
+                        <div class="TimeDD TimeBottom"></div>
+                        <div class="TimeDD TimeRight"></div>
+                    </div>
+                </div>
+
+
+
+            </li>
         </ul>
     </div>
 </div>
+
 <script type="text/javascript">
     $(function () {
         var DH = document.documentElement.clientHeight;
@@ -287,11 +340,11 @@
                 '        <p class="yeshref setAH"><button><a href="javascript:;">确认</a></button></p>\n' +
                 '    </div>\n' +
                 '</div>';
-            $("body").append('<div class="setWell">'+setPopHtml+'</div>');
+            $("body").append('<div class="setWell">' + setPopHtml + '</div>');
             $(".setWell").height(DH)
             // $(".yeshref a").attr('href', url);
             $(".yeshref").click(function () {
-                window.location.href=url
+                window.location.href = url
             })
             $(".hrefCon").html('是否确认跳转至 - ' + value + ' - 页面')
             $(".hrefPop").css({
@@ -366,6 +419,107 @@
                     })
                 }, 30)
             })
+        }
+
+        // 提示
+        TipsOperation();
+
+        function TipsOperation() {
+            var Tips = '<div class="TipsDiv">\n' +
+                '    <div class="TipsCon">\n' +
+                '        <div class="topTips">\n' +
+                '            <p>温馨提示:</p>\n' +
+                '            <p>把鼠标放在页面的中央区域，按下鼠标，左右拖动进行页面的预览！</p>\n' +
+                '            <p><i>点击页面取消提示</i></p>\n' +
+                '        </div>\n' +
+                '    </div>\n' +
+                '</div>'
+            $('body').append(Tips)
+            $(".TipsDiv").height(DH);
+            $(".TipsCon").css({
+                "top": Math.random() * (DH - $(".TipsCon").height()) + "px",
+                "left": Math.random() * (DW - $(".TipsCon").width()) + "px",
+            });
+
+            $(document).click(function () {
+                $('.TipsDiv').remove()
+            })
+        }
+
+
+
+
+
+        var times = {};
+        var getDate;
+        var TimeWidth = 10;
+        var ItemsF={
+            width:$(".showTime").width(),
+            height:$(".showTime").height(),
+            background:['#67C23A','#E6A23C','#F56C6C','#909399','#409EFF']
+        };
+
+        TimeNew();
+        setInterval(function () {
+            TimeNew()
+        }, 1000);
+        function TimeNew() {
+            getDate = new Date();
+            times = {
+                getFullYear: getDate.getFullYear(),
+                getMonth: getDate.getMonth() + 1,
+                getDate: getDate.getDate(),
+                getHours: getDate.getHours(),
+                getMinutes: getDate.getMinutes(),
+                getSeconds: getDate.getSeconds()
+            };
+            times.getHours = setHMS(times.getHours);
+            times.getMinutes = setHMS(times.getMinutes);
+            times.getSeconds = setHMS(times.getSeconds);
+            var timesN = times.getFullYear + "-" + times.getMonth + "-" + times.getDate + " " + times.getHours + ":" + times.getMinutes + ":" + times.getSeconds;
+            var getBGColor=ItemsF.background[parseInt(Math.random()*ItemsF.background.length)+1];
+            $(".showTimeC").html(times.getSeconds);
+            $(".showTimeC").css({
+                'color':getBGColor
+            });
+            $(".showTime").css({
+                'borderColor':getBGColor
+            });
+            $(".showTimeC").css({
+                'borderColor':getBGColor
+            });
+            $(".timeP").html(timesN);
+            $(".showTime .TimeDD").css({
+                "width": 0,
+                "height": 0,
+                "background":getBGColor
+            });
+            $(".showTime .TimeDD").eq(0).height(TimeWidth);
+            $(".showTime .TimeDD").eq(0).animate({
+                "width": ItemsF.width
+            }, 250,'linear', function () {
+                $(".showTime .TimeDD").eq(1).width(TimeWidth);
+                $(".showTime .TimeDD").eq(1).animate({
+                    "height": ItemsF.height
+                }, 250,'linear', function () {
+                    $(".showTime .TimeDD").eq(2).height(TimeWidth);
+                    $(".showTime .TimeDD").eq(2).animate({
+                        "width": ItemsF.width
+                    }, 200,'linear', function () {
+                        $(".showTime .TimeDD").eq(3).width(TimeWidth);
+                        $(".showTime .TimeDD").eq(3).animate({
+                            "height": ItemsF.height
+                        }, 250,'linear')
+                    })
+                })
+            })
+        }
+        function setHMS(val) {
+            if (val < 10) {
+                return '0' + val
+            } else {
+                return val
+            }
         }
     })
 
